--- a/Channer/Application/Info.plist
+++ b/Channer/Application/Info.plist
@@ -29,6 +29,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Use FaceID or TouchID to open History, Favorites, and Downloads</string>
 	<key>UIFileSharingEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
