--- a/Channer/Application/Info.plist
+++ b/Channer/Application/Info.plist
@@ -31,6 +31,8 @@
 	</dict>
 	<key>NSFaceIDUsageDescription</key>
 	<string>Used to access your favorites, history, downloads</string>
+	<key>NSUserNotificationAlertStyle</key>
+	<string>alert</string>
 	<key>UIFileSharingEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -38,6 +40,10 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
