--- a/.github/workflows/Xcode_build_PR.yml
+++ b/.github/workflows/Xcode_build_PR.yml
@@ -1,12 +1,13 @@
-# .github/workflows/pr.yml
+# File: .github/workflows/pr.yml
 name: Xcode Build on PR
+
+permissions:
+  contents: read        # for checkout & artifacts
+  issues: write         # to post via the Issues API
+  pull-requests: write  # to allow GraphQL addComment on PRs
 
 on:
   pull_request:
-
-permissions:
-  contents: read      # for checkout/artifacts
-  issues: write       # to allow gh pr comment via the GITHUB_TOKEN
 
 jobs:
   build:
