--- a/.github/workflows/Xcode_build_PR.yml
+++ b/.github/workflows/Xcode_build_PR.yml
@@ -2,9 +2,9 @@
 name: Xcode Build on PR
 
 permissions:
-  contents: read        # for checkout & artifacts
-  issues: write         # to post via the Issues API
-  pull-requests: write  # to allow GraphQL addComment on PRs
+  contents: read
+  issues: write
+  pull-requests: write
 
 on:
   pull_request:
@@ -14,8 +14,7 @@ jobs:
     runs-on: [self-hosted, macstudio]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Select Xcode version
         run: sudo /usr/bin/xcode-select -s /Applications/Xcode.app
@@ -24,7 +23,6 @@ jobs:
         id: build
         continue-on-error: true
         run: |
-          cd Channer
           set +e
           xcodebuild -project Channer.xcodeproj \
                      -scheme Channer \
@@ -39,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-errors
-          path: Channer/errors.log
+          path: errors.log
           if-no-files-found: warn
           retention-days: 7
 
@@ -48,12 +46,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cd Channer
           if [ ! -s errors.log ]; then
             ERRORS="⚠️ Build failed, but no clear errors were found."
           else
             ERRORS=$(sed 's/`/\\`/g' errors.log)
           fi
+
           {
             echo "🚨 **Xcode Build Failed** on \`${{ github.head_ref }}\`"
             echo ""
@@ -64,6 +62,7 @@ jobs:
             echo '```'
             echo "</details>"
           } > comment.txt
+
           gh pr comment ${{ github.event.pull_request.number }} --body "$(cat comment.txt)"
 
       - name: Fail the job if build failed
