--- a/Frameworks/VLCKit.xcframework/Info.plist
+++ b/Frameworks/VLCKit.xcframework/Info.plist
@@ -7,6 +7,8 @@
 		<dict>
 			<key>BinaryPath</key>
 			<string>VLCKit.framework/VLCKit</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64_x86_64-simulator</string>
 			<key>LibraryPath</key>
@@ -23,7 +25,28 @@
 		</dict>
 		<dict>
 			<key>BinaryPath</key>
+			<string>VLCKit.framework/Versions/A/VLCKit</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
+			<key>LibraryIdentifier</key>
+			<string>ios-arm64_x86_64-maccatalyst</string>
+			<key>LibraryPath</key>
+			<string>VLCKit.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+				<string>x86_64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>ios</string>
+			<key>SupportedPlatformVariant</key>
+			<string>maccatalyst</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
 			<string>VLCKit.framework/VLCKit</string>
+			<key>DebugSymbolsPath</key>
+			<string>dSYMs</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64</string>
 			<key>LibraryPath</key>
