Add background saved-search checks and alerts to surface new matches, and show progress for all-board search.

--- a/Channer/Application/Info.plist
+++ b/Channer/Application/Info.plist
@@ -42,6 +42,7 @@
 	<array>
 		<string>com.newatlantisstudios.channer.threadRefresh</string>
 		<string>com.newatlantisstudios.channer.watchedPostsCheck</string>
+		<string>com.newatlantisstudios.channer.savedSearchCheck</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
 	<true/>
